# animata

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  DEV_BRIDGE.md  GOTCHAS.md  PLAN.md  README.md  SWEEP_README.md  life_save.txt  life_save.txt.tree
.cargo/: config.toml
.claude/: .gitignore  kit.config.sh  settings.json  slice1j_ac0_measurements.md  status.md
.config/: nextest.toml
crates/animata/: Cargo.toml
crates/animata-sim/: Cargo.toml
crates/animata-sim/examples/: analyze_save.rs  convert_save.rs  probe_aerobic.rs  probe_autotroph.rs  probe_cap.rs  probe_oxygen.rs  probe_zones.rs
crates/animata-sim/src/: clock.rs  clock_tests.rs  config.rs  economy_tests.rs  env.rs  erosion.rs  fastmath.rs  fastmath_tests.rs  genome.rs  genome_tests.rs  grid.rs  grid_tests.rs  hydrology.rs  lem.rs  lib.rs  persist.rs  persist_tests.rs  persist_v2.rs  pressure_tests.rs  profile.rs  sim.rs  sim_config.rs  sim_config_tests.rs  sim_tests.rs  tectonics.rs  terrain.rs  terrain_tests.rs
crates/animata-sim/src/gpu/: erosion.rs  erosion.wgsl  mod.rs
crates/animata-sim/src/metrics/: builtin.rs  mod.rs  tests.rs
crates/animata-sim/src/pressure/: aerobic.rs  autotrophy.rs  camouflage.rs  climate.rs  metabolism.rs  mod.rs  nutrient.rs  oxygen.rs  predation.rs  seasonality.rs  strata.rs  tests.rs  toxicity.rs
crates/animata/src/: dev_bridge.rs  mac_icon.rs  main.rs  main_tests.rs  render_snapshot.rs  sim_driver.rs  terrain_dump.rs
crates/animata/src/render/: camera.rs  gpu.rs  mesh.rs  mod.rs  streamer.rs
crates/animata/src/ui/: hud.rs  inspector.rs  loader.rs  minimap.rs  mod.rs  theme.rs
examples/: headless.rs  sweep.rs
scripts/: bundle-macos.sh  ci-report.sh  compile-check.sh  sim-run.sh  test-bar.sh  verify-shard-coverage.sh
src/: behavior.rs  biome.rs  body.rs  brain.rs  clock.rs  config.rs  creature.rs  dev_bridge.rs  erosion.rs  genome.rs  genome_tests.rs  grid.rs  grid_tests.rs  hydrology.rs  main.rs  (+14 more)
v2/: Cargo.toml  rust-toolchain.toml
v2/.ci-report/: run.json  summary.txt
v2/.ci-report/artifacts/test-report-arm64/: junit.xml
v2/.ci-report/artifacts/test-report-x86/: junit.xml
v2/crates/brain/: Cargo.toml
v2/crates/brain/src/: lib.rs  lut.rs
v2/crates/brain/tests/: no_float_guard.rs
v2/crates/cli/: Cargo.toml
v2/crates/cli/src/: lib.rs  main.rs
v2/crates/cli/tests/: b2_metabolic_profile.rs  b3_proportional_ration.rs  b4_calibration_probe.rs  brain_multirate.rs  c_calibration_probe.rs  classify_gen.rs  cprime_conservation.rs  cprime_emergence.rs  d3a_body_size.rs  d5_drift.rs  d_calibration_probe.rs  dc_diag_size_ceiling.rs  death_recycle.rs  determinism.rs  diff0_type_probe.rs  differentiation_config.rs  dol_0_5_separability.rs  dol_germ_repro_interior_optimum_probe.rs  dol_mechanic.rs  dprime_tests.rs  dr0_economy_coupled.rs  dr0_golden_neutral.rs  driver_config.rs  driver_dol_verdict.rs  economy_corridor.rs  env0a_a15_patch_field.rs  env0a_a2_invasibility.rs  env0a_multitemplate.rs  env_frontier_golden.rs  ext0a_footprint.rs  extent_economy.rs  ga_load_ratchet.rs  golden.rs  golden_conserved.rs  hypoxia_verdict.rs  kitchensink_verdict.rs  m7b_apoptosis.rs  m7c_germ_soma.rs  m7d_supply_gate.rs  m7e_coord_cost.rs  (+30 more)
v2/crates/fields/: Cargo.toml
v2/crates/fields/src/: lib.rs
v2/crates/render/: Cargo.toml  render-tuning.example.toml
v2/crates/render/assets/shaders/: chunk_v2.frag  chunk_v2.vert
v2/crates/render/docs/u3/: IMPLEMENTATION.md
v2/crates/render/src/: biome_palette.rs  camera.rs  creatures.rs  draw.rs  driver.rs  dump_world.rs  gpu_terrain.rs  hex.rs  input.rs  loader_state.rs  main.rs  raw_chunk.rs  terrain.rs  terrain_cube.rs  tuning.rs  world_builder.rs  world_spec.rs
v2/crates/render/src/ui/: legend.rs  loader.rs  minimap.rs  mod.rs  rail.rs  theme.rs  toast.rs  transport.rs  vitals.rs
v2/crates/sim-core/: Cargo.toml
v2/crates/sim-core/src/: components.rs  det_map.rs  energy.rs  genome.rs  grid.rs  grn.rs  grn_lut.rs  hash.rs  homology.rs  input.rs  lib.rs  morphogen.rs  params.rs  pool.rs  predation.rs  rng.rs  stages.rs  traits.rs
v2/crates/sim-core/tests/: no_float_guard.rs
v2/crates/telemetry/: Cargo.toml
v2/crates/telemetry/src/: lib.rs
v2/crates/world/: Cargo.toml
v2/crates/world/examples/: w17_byte_equiv.rs  w17_timing.rs
v2/crates/world/src/: lib.rs  palette.rs
v2/crates/world/tests/: no_float_guard_gen.rs  w11_chain.rs  w17_cross_invocation_byte_equiv.rs  w1i_plate_golden.rs  w2_chain.rs  w3_chain.rs  w4_chain.rs  w5_chain.rs
v2/docs/terragen-v3-probe/: probe_256x256_broad_dome_s0_rfedcba9876543210.ppm  probe_256x256_broad_dome_s100_rfedcba9876543210.ppm  probe_256x256_broad_dome_s200_r123456789abcdef0.ppm  probe_256x256_gaussian_peak_s0_r123456789abcdef0.ppm  probe_256x256_gaussian_peak_s0_rfedcba9876543210.ppm  probe_256x256_gaussian_peak_s200_r123456789abcdef0.ppm  probe_256x256_gaussian_peak_s200_rfedcba9876543210.ppm  probe_256x256_gaussian_peak_s50_rfedcba9876543210.ppm  probe_256x256_parallel_ridges_s0_r123456789abcdef0.ppm  probe_256x256_parallel_ridges_s100_r123456789abcdef0.ppm  probe_256x256_parallel_ridges_s100_rfedcba9876543210.ppm  probe_256x256_parallel_ridges_s200_r123456789abcdef0.ppm  probe_256x256_parallel_ridges_s200_rfedcba9876543210.ppm  probe_256x256_parallel_ridges_s50_rfedcba9876543210.ppm  probe_64x64_broad_dome_s0_r123456789abcdef0.ppm  probe_64x64_broad_dome_s0_rfedcba9876543210.ppm  probe_64x64_broad_dome_s100_rfedcba9876543210.ppm  probe_64x64_broad_dome_s200_r123456789abcdef0.ppm  probe_64x64_broad_dome_s50_r123456789abcdef0.ppm  probe_64x64_gaussian_peak_s0_r123456789abcdef0.ppm  probe_64x64_gaussian_peak_s0_rfedcba9876543210.ppm  probe_64x64_gaussian_peak_s100_r123456789abcdef0.ppm  probe_64x64_gaussian_peak_s100_rfedcba9876543210.ppm  probe_64x64_parallel_ridges_s0_r123456789abcdef0.ppm  probe_64x64_parallel_ridges_s100_rfedcba9876543210.ppm  probe_64x64_parallel_ridges_s200_rfedcba9876543210.ppm  probe_64x64_parallel_ridges_s50_rfedcba9876543210.ppm
v2/pm/reports/: topo-rung0-deficit-probe-preregistration.md
v2/tools/: gen_brain_lut.py  gen_grn_lut.py
(+108 files in other folders)
