# v2 — STANDALONE cargo workspace (F1/F2). Own Cargo.toml / Cargo.lock / [profile] / toolchain pin,
# isolated from the root v1 workspace: bevy_ecs's transitive graph cannot perturb v1's codegen and
# v1's golden, and v2 may track a newer MSRV without bumping v1's 1.96.0 pin.
[workspace]
resolver = "2"
# M1 adds world/fields/telemetry (F6: introduced when there is something to put in them).
# M3 adds brain (fixed-point integer neural inference behind the `sim-core::Brain` trait).
members = ["crates/sim-core", "crates/cli", "crates/world", "crates/fields", "crates/telemetry", "crates/brain"]
# R-1: `crates/render` (the macroquad render bin) is EXCLUDED, not a member — CI's v2 jobs run
# `cargo nextest run --workspace`, which builds/tests every listed member; a workspace member would
# drag the render bin (macroquad/egui/GL deps) into every CI run, contradicting the render posture
# (CLAUDE.md / issue #219): the render bin is a leaf, verified LOCALLY only, never in CI. `render` is
# its own STANDALONE workspace (own Cargo.toml/[workspace]/Cargo.lock, same pattern this file uses
# relative to the v1 root workspace) with ordinary path deps into sim-core/cli/world — depending on a
# CI'd crate is fine and golden-neutral; being *depended on* by one would not be.
exclude = ["crates/render"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# bevy_ecs STANDALONE (headless ECS — no winit/render/input), pinned EXACT.
# Task-0 (engineering/00, verified 2026-06-24): bevy_ecs 0.19.0, MSRV rust_version = 1.95.0
# ≤ v2 toolchain 1.96.0. NOT full bevy (that lands only in a future `presentation` crate, out of scope).
bevy_ecs = { version = "=0.19.0", default-features = false, features = ["std"] }
# Explicit-N thread pool for the M2 scatter (F5 — own pool, not num_cpus/bevy default). Used ONLY for
# independent per-thread staging build; NO parallel float reduction goes through it (F2).
rayon = "1.12"
# Internal v2 crates. sim-core depends on NONE of these (R1 — pure core); world/fields/telemetry
# depend on sim-core for the trait + Vec2Fixed types; cli wires the concrete backends in.
sim-core = { path = "crates/sim-core" }
world = { path = "crates/world" }
fields = { path = "crates/fields" }
telemetry = { path = "crates/telemetry" }
brain = { path = "crates/brain" }

# Profiles live in the v2 workspace root — independent of v1. Determinism is per-PROFILE (release FMA
# fusing diverges from debug), so the M0 golden is pinned for BOTH; M0 is integer so it is also
# cross-ARCH identical (→ x86-only CI in M0, F4).
[profile.release]
opt-level = 3
lto = true
