[package]
name = "animata"
version = "0.2.0"
edition = "2021"
description = "Voxel isometric world on macroquad-3D — renderer for the animata simulation"

[[bin]]
name = "animata"
path = "src/main.rs"

[dependencies]
macroquad = "0.4"
animata-sim = { path = "../animata-sim" }
tiny_http = { version = "0.12", optional = true }
serde_json = { version = "1", optional = true }

[features]
# Localhost JSON-RPC control/inspection bridge for autonomous verification (drive the camera,
# reseed, capture screenshots). Off by default. See DEV_BRIDGE.md. Run: cargo run -p animata --features dev
dev = ["dep:tiny_http", "dep:serde_json"]
