[package]
name = "sim-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "animata v2 deterministic simulation core (M0 walking skeleton)"

[dependencies]
bevy_ecs.workspace = true

[features]
# Per-stage wall-clock ns + ns/entity instrumentation (R26). Off by default — zero cost in the
# golden/determinism path; timing is non-deterministic so it never feeds the tick or the state hash.
perf = []
