[package]
name = "sim-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "animata v2 deterministic simulation core (M0 walking skeleton)"

[dependencies]
bevy_ecs.workspace = true
rayon.workspace = true

[dev-dependencies]
# Test-only: verify the committed grn_lut.rs SIGMA_LUT by SHA-256 checksum (mirrors the brain crate's
# lut_checksum_matches_committed). Never used in the inference/dynamics path itself.
sha2 = "0.10"

[features]
# Per-stage wall-clock ns + ns/entity instrumentation (R26). Off by default — zero cost in the
# golden/determinism path; timing is non-deterministic so it never feeds the tick or the state hash.
perf = []
